--- a/vitrales.html
+++ b/vitrales.html
@@ -684,6 +684,8 @@ Sin firma visible: posible atribución a Lavers & Westlake
 	
 	-->
 <br>
+Imágenes :<a href="http://www.espaciotransparente.cl/">  EspacioTransparente   </a>
+<br><br>
 <h3><a title="Volver" 
 href="../saintpaul_historical_website/index.html">&#9664 Volver a 
 página principal</a></h3>
