--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<center><img src="images/pentecost_window.jpg"></center>
+<!DOCTYPE html>  
+<html>  
+	<head> 
+		
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
+		<title>Saint Paul's</title>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		
+			<script>
+				</script>
+
+				
+				<br>
+<center><img src="images/vitrales/pentecost_window.jpg"></center>
+<br>
+</head>
+
+				
+				<style>
+div {
+  margin: 35px;
+
+}
+</style>
+
+<body>
+<br>
+
+<div><h1>	
+
+
+	<br><br>
+<a href="vitrales.html">Vitrales</a>
+<br>
+<br>
+
+<a href="heritagetour.html">Heritage Tour</a>
+
+<br>
+<br>
+<a href="
+https://www.tripadvisor.com.ph/Attraction_Review-g294306-d8698420-Reviews-Catedral_Saint_Paul-Valparaiso_Valparaiso_Region.html?m=19905
+">Catedral Saint Paul en TripAdvisor</a>
+
+
+
+<br>
+<br>
+<br>
+
+
+</h1>
+
+</div>
+
+</body>
