--- a/vitrales.html
+++ b/vitrales.html
@@ -670,7 +670,7 @@ Sin firma visible: posible atribución a Lavers & Westlake
 Imágenes :<a href="http://www.espaciotransparente.cl/">  EspacioTransparente   </a>
 <br><br>
 <h3><a title="Volver" 
-href="../saintpaul_historical_website/index.html">&#9664 Volver a 
+href="index.html">&#9664 Volver a 
 página principal</a></h3>
 	
 	
