--- a/vitrales.html
+++ b/vitrales.html
@@ -181,6 +181,11 @@ p {
 
 
 		</style>
+		
+		
+		
+		
+		
 		<script type="text/javascript">
 			$(document).ready(function() {
 				function onHash() {
@@ -209,6 +214,10 @@ p {
 		
 		
 	</head>  
+	
+	
+	
+	
 	<body>
 		<a name="vitrales"></a>
 		<div class="container">
@@ -223,10 +232,10 @@ Vitral 1:
 La vida de San Pablo" onClick="location.href='vitrales.html#1'" value='1'>1</button>
 <button  title ="
 2: Jesús calma las aguas" type=button class="tablinks" 
-onClick="location.href='vitrales.html#2'" value='2'>2</button>
+onClick="location.href='vitrales.html#2'" value='vitral-2'>2</button>
 <button  title="
 3. Simeón sosteniendo al niño Jesús" type=button class="tablinks" 
-onClick="location.href='vitrales.html#3'" value='3'>3</button>
+onClick="location.href='vitrales.html#3'" value='vitral-3'>3</button>
 
 <button  title="4. David con la cabeza de Goliat" type=button class="tablinks" 
 onClick="location.href='vitrales.html#4'" value='4'>4</button>
