--- a/vitrales.html
+++ b/vitrales.html
@@ -186,29 +186,9 @@ p {
 		
 		
 		
-		<script type="text/javascript">
-			$(document).ready(function() {
-				function onHash() {
-					if(!window.location.hash) {
-						return;
-					}
-					var name = window.location.hash.substr(1),
-							el = document.getElementById('vitral-' + name);
-				
-					if(el) {					
-						// remove current page's class
-						document.getElementsByClassName('page-active')[0].className = 'page';
-						// add new page's class
-						el.className = ' page-active';
-					}
-				};
-			
-				window.onhashchange = onHash;
-				onHash();
-			});
-		</script>
+
 		
-		
+		<script src="js/vitrales.js"></script>
 	
 		
 		
@@ -232,10 +212,10 @@ Vitral 1:
 La vida de San Pablo" onClick="location.href='vitrales.html#1'" value='1'>1</button>
 <button  title ="
 2: Jesús calma las aguas" type=button class="tablinks" 
-onClick="location.href='vitrales.html#2'" value='vitral-2'>2</button>
+onClick="location.href='vitrales.html#2'" value='2'>2</button>
 <button  title="
 3. Simeón sosteniendo al niño Jesús" type=button class="tablinks" 
-onClick="location.href='vitrales.html#3'" value='vitral-3'>3</button>
+onClick="location.href='vitrales.html#3'" value='3'>3</button>
 
 <button  title="4. David con la cabeza de Goliat" type=button class="tablinks" 
 onClick="location.href='vitrales.html#4'" value='4'>4</button>
