--- a/vitrales.html
+++ b/vitrales.html
@@ -9,186 +9,19 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
- 
+ <link href="css/vitrales.css" rel="stylesheet">
+
 		<title>Vitrales de St Paul’s</title>
 		<!-- code from https://gist.github.com/pgr86/2420594 W3schools.com and others-->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		
-			<script>
-		
-
-		</script>
-		
-		
-		
-		
-		
-		<style>
-			.page {
-				display: none;
-			}
-
-			.page-active {
-				display: block;
-			}
-			dl {
-				list-style-type: none;
-			}
-
-			dl li {
-				text-decoration: none;
-				color: black;
-			}
-			
-			
-			
-			
-			
-			
-			
-			
-
-img {
-  /*width: 90%;*/
-  width: 300px;
-}
-
-
-/* Browser specific (not valid) styles to make preformatted text wrap */		
-
-pre {
- white-space: pre-wrap;       /* css-3 */
- white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
- white-space: -pre-wrap;      /* Opera 4-6 */
- white-space: -o-pre-wrap;    /* Opera 7 */
- word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-body {
-  /*margin: 35px;*/
-}
-
-
-
-
-
-
-
-
-
- /* Style the tab */
-.tablinks {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tablinks input {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tablinks input:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tablinks input.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  /*border: 1px solid #ccc;*/
-  border-top: none;
-
-} 
-
-
-
-
-.container{
-	  margin: 0px;
-	}
-
-
-/*
-p {
-	width: 80%;
-	}
-*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /* Style the tab */
-.tab {
-  overflow: hidden;
- /* border: 1px solid #ccc;
-  background-color: #f1f1f1;*/
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
- /* background-color: inherit;*/
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.bod {
- 
-  padding: 6px 12px;
-  /*border: 1px solid #ccc;*/
-  border-top: none;
-} 
-
-
-
-
-		</style>
-		
-		
+	
 		
 		
 		
 
 		
-		<script src="js/vitrales.js"></script>
+
 	
 		
 		
@@ -213,12 +46,12 @@ La vida de San Pablo" onClick="location.href='vitrales.html#1'" value='1'>1</but
 <button  title ="
 2: Jesús calma las aguas" type=button class="tablinks" 
 onClick="location.href='vitrales.html#2'" value='2'>2</button>
-<button  title="
+<input  title="
 3. Simeón sosteniendo al niño Jesús" type=button class="tablinks" 
-onClick="location.href='vitrales.html#3'" value='3'>3</button>
+onClick="location.href='vitrales.html#3'" value='3'>3</input>
 
-<button  title="4. David con la cabeza de Goliat" type=button class="tablinks" 
-onClick="location.href='vitrales.html#4'" value='4'>4</button>
+<input  title="4. David con la cabeza de Goliat" type=button class="tablinks" 
+onClick="location.href='vitrales.html#4'" value='4'>4</input>
 <button  title="5. Jesús sana a un no vidente" type=button class="tablinks" 
 onClick="location.href='vitrales.html#5'" value='5'>5</button>
 <button  title="6. El bautismo de Jesús por Juan Bautista " type=button class="tablinks" onClick="location.href='vitrales.html#6'" value='6'>6</button>
@@ -667,7 +500,7 @@ página principal</a></h3>
 </div><!--container-->
 
   
-
+		<script src="js/vitrales.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
