--- a/vitrales.html
+++ b/vitrales.html
@@ -27,6 +27,19 @@ img {
 }
 
 
+body {
+ 
+  padding: 6px 12px;
+  /*border: 1px solid #ccc;*/
+  border-top: none;
+} 
+p {
+	padding 35px 35px;
+	}
+body {
+  margin: 35px;
+}
+
 		</style>
 
 		
