--- a/vitrales.html
+++ b/vitrales.html
@@ -40,6 +40,14 @@ body {
   margin: 35px;
 }
 
+
+.contain
+{/*need to center div	*/
+	max-width: 95%;
+	min-width: 300px;
+
+	}
+
 		</style>
 
 		
@@ -130,6 +138,9 @@ Reja
 						</dl>
 					</td>
 					<td class='info'>
+						
+						<div class= "contain">
+						
 						<div class='page page-active' id='vitral-1'>
 				<a name="1"></a> 
 							<h3>Vitral 1:</h3>  
