--- a/heritagetour.html
+++ b/heritagetour.html
@@ -26,8 +26,21 @@ pre {
 
 body {
   margin: 35px;
+  
+  /*min-width: 400px;
+  max-width: 100%;*/
 }
+.contain
+{
+	width: 60%;
+	min-width: 300px;
+	
+	}
 
+img
+{
+	max-width:100%;
+	}
 </style>
 <script>
 function CopyToClipboard(containerid) {
@@ -47,10 +60,13 @@ if (document.selection) {
 </script>
 
 </head>
-<body>
 <a name="top"></a>
-<pre></pre>
+<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+
 <img src="images/heritage_tour/map.jpg">
+
+<body>
+
 <font size="3.5em">
 <a href="#1">1</a>&nbsp;&nbsp;&nbsp;
 <a href="#2">2</a>&nbsp;&nbsp;&nbsp;
@@ -66,6 +82,10 @@ if (document.selection) {
 <a href="#12">12</a>&nbsp;&nbsp;&nbsp;
 </font>
 <br><br>
+
+
+
+<div class="contain">
 <h1>
 European Heritage Tour.<br></h1>
 This webpage is meant to guide you on a tour: <b>
@@ -81,7 +101,10 @@ Clicking on an address will take you to that location on the google maps website
 Calle Prat</h3>
 <a name="1"></a> 
 <b>1. Bank of London: (Santander)</b> <a href="https://goo.gl/maps/JreWpRnacjFdHAu38">(Prat 882)</a>  <br>The bank was founded in 1907, when Valparaíso was the banking centre of the nitrate industry and where all the financial deals were done. These banks left behind some of the best of Valparaíso's architecture, especially in Calle Pratt and Cochrane. The Bank of London, now the Santander Bank, is one of the finest examples, with beautiful woodwork, cornices and mosaic tiles.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
+
 <br>
 <br>
 <a name="2"></a> 
@@ -89,7 +112,9 @@ Calle Prat</h3>
 It has retained all of its original furniture and fittings thanks to the loyalty of its clients, who despite a close down sale ensured that everything was left in place.
 
 
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 <br>
 <br>
 <a name="3"></a> 
@@ -102,7 +127,9 @@ the German Transatlantic Bank was established in 1896 and opened branches
 in Concepción, Temuco, Valdivia, Antofagasta and Iquique. 
 By 1910 the three German banks in Valparaíso represented more than
 22% of all the bank capital held in the city.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 <br>
 <br>
 <b><a href="https://es.wikipedia.org/wiki/El_Mercurio_de_Valpara%C3%ADso"> El Mercurio Founded in 1827 </a></b> <a href="https://goo.gl/maps/iB2Uhyezxyg8xGpVA">(Esmeralda 1002)</a>
@@ -129,7 +156,9 @@ Monument to Chile’s naval heroes of the War of Independence.
 <b>4. Garland 11th Fire Company 1851.</b><a href="https://goo.gl/maps/cKHGT7uH3SGc496T9"> (Melgarejo 210)</a> <br> 
  Founded as the 1st company, along with the German fire company, it combined with the 11th company and became known as “The George Garland”.
 George Garland himself played an important part in the life of the city. As an enthusiastic sportsman and benefactor he dedicated himself to the wellbeing of the young, founding recreational clubs and societies. Amongst them the Valparaíso Sporting Club, the Cricket club and the Foxhunting club. 
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 <br>
 <br>
@@ -145,7 +174,9 @@ From the fire Station, follow AV. Brasil until you reach Bellavista. Cross it an
 If you have a moment pop into the Hamburgo Restaurant where visiting seamen have left many momentos of the travels.
 From the monument continue along Av. Brasil until you reach Eleuterio Ramirez 
 where you will see the Arco Britanico.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 <br>
 <br>
@@ -154,7 +185,9 @@ where you will see the Arco Britanico.
 "> (1559,, Brasil 1509)</a> <br>
 This monument was donated to the city of Valparaíso in 1911 to celebrate the 100 anniversary of Chilean independence. The wealth and influence of the British community in Valparaíso is reflected in the Carrara Marble and bronze used in its construction. It has a bust in bronze of 4 people of British heritage, who fought for Chile during the war of independence: Cochrane, O’Higgins, O’Brien and Simpson. Queen Elizabeth II visited the arch during her trip to Chile in 1968.
 Crossing from the Arch towards Salvador Donoso you will see A large White building recently renovated. This is the German club.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 <br>
 <br>
 <a name="7"></a> 
@@ -162,7 +195,9 @@ Crossing from the Arch towards Salvador Donoso you will see A large White buildi
 "> (Salvador Donoso 1337)</a> <br>
 The Club Alemán was founded in 1838 and is the oldest of its type in South America. It was created by 27 young Germans as a place to read, make music and create theatre. In a short time it established itself as a social and cultural centre, offering to the Porteño society a variety of activities, brought to them by the best artists of the region. In 1976 the Palacio Ross building was declared a historic monument and in 2013 the Club Aleman was nominated as a part of Valparaíso’s cultural heritage, bearing testimony to the close links of friendship and interchange that have existed between the communities.
 
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 <br>
 <br>
 <br>
@@ -173,7 +208,9 @@ Cerro Panteón </h3>
 <br>
 <b>Ascensor Panteon</b>
 From 1901 to 1952 there was an “ascensor” (Ascensor Panteon) from Avenida Ecuador to calle Dinamarca. It was built by the British company, Balfour-Lyon. Initially it was water powered, but by 1910 a steam engine was used and finally an electric motor. There were several accidents; one being on 7th February 1909 when the operator was drunk, one person died and two were seriously injured. The upper station remains but is hard to identify.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 
 <br>
@@ -182,7 +219,9 @@ From 1901 to 1952 there was an “ascensor” (Ascensor Panteon) from Avenida Ec
 <b>8. Cementerio de Dissidentes</b> <a href="https://goo.gl/maps/KQUG2UiDGxsq3bL3A
 "> (Dinamarca 217)</a><br>
 Until 1825 non-Catholics were not permitted to be buried in any cemetery and were instead interred on the hillsides or seashore, sometimes even in caves.  However, in 1819 Bernardo O’Higgins, supreme Director of Chile, responded to a petition by protestants and gave them the right to buy land for their own burial grounds. In 1825, the land next to the catholic cemetery no. 1 was purchased in the name of the British consul  as a burial ground for the “Dissidentes”. The first recorded burial of Captain William Wilkinson was in 1825. The British, German, French and North American communities financed the operation. Cemeteries remained exclusively catholic until 1887, when they were given civil status.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 <br>
 <br>
 <br>
@@ -197,7 +236,9 @@ Cerro Concepción
 Ascensor Reina Victoria goes up from avenida Elias to Paseo Dimalow on Cerro 
 Alegre. On 9th July 1902 the municipality granted a permit to Frederico Page to 
 build a water powered “ascensor” to connect Callejon Elias No. 2 with Paseo Dimalow. It was inaugurated in March 1903 and named after Queen Victoria, who died in 1901. It is 39 metres long and rises 33 metres at an angle of 57 degrees, making it the steepest of all the “ascensors” in the city. Initially it was powered by a water balancing system, but is now electric. It has been said, that the architecture of the ground station, reopened in 1988, is of “a dubious modernist experimental line completely at odds with the characteristics of the area”. (Caceres 2009)
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 <br>
 <br>
@@ -210,7 +251,9 @@ From Ascensor Reina Victoria go along Paseo Dimalow, walking down Almirante Mont
 In 1857 the German community agreed to the creation of a college  and rented properties in the centre of the city. In 1870 the “Asociación del colegio Alemán” bought a piece of land on Cerro Concepción big enough to build a modern educational establishment. With the establishment of the German empire teachers were sent out from Germany.                                                                         The growth of the college was reflected in its constant enlargement, some of which were made necessary by earthquakes. For more than 100 years, between 1870 and 1985, the German college remained in Cerro Concepción and established itself as a centre of excellence for sport, music and theatre, whose principal purpose was to promote German culture within the German settlers and their descendants.  
 In 2016 it was recognised as a historic monument and was subsequently sold to the businessman Sr. Dib.
 
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 
 <br>
@@ -220,7 +263,9 @@ In 2016 it was recognised as a historic monument and was subsequently sold to th
 <b>11. Lutheran Church</b> <a href="https://goo.gl/maps/Ki7CGdfdq5SV1onU8
 "> (Abtao 689)</a> <br>
 During the first decades of the 19th century the Anglican Church was the primary meeting place for the neighbourhood where the German and British community lived. Chilean society was mainly catholic and the settlers mainly protestants and for this reason they shared together in the celebration of religious services and pastoral care until the German community was able to establish their own church in 1867. Thirty years later, in 1897 the building of their own church building began with the laying of the foundation stone in the care of the Bliederhauser Brothers firm of Architects.
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 <br>
 <br>
@@ -230,7 +275,9 @@ During the first decades of the 19th century the Anglican Church was the primary
 St. Paul’s was built in 1858 by the British railway engineer William Lloyd and contains a number of notable features. It was named a national monument in 1979 and elevated to the status of cathedral in 2016. During the construction, the government of the time only allowed the construction of the church on understanding that it maintained a low profile. It was not permitted to build a spire nor a  bell tower, or to display an external cross. The principal access should not open on to the street directly only allow access through a side door.
 Inside the beamed  timber roof is of a unique laminated construction only found elsewhere at that time in the arches of the Cristal Palace and Charing Cross station. The timber used is of Oregon pine as in many constructions in Valparaíso. 
 
-<br><a href="#top">top</a>
+<br>
+<br><h1><a style="float: right;" 
+				href="#top" title="Top" >&#9650</a></h1>	
 
 <br>
 <br>
