--- a/vitrales.html
+++ b/vitrales.html
@@ -40,12 +40,17 @@ body {
   margin: 35px;
 }
 
+* {
+    box-sizing: border-box;
+}
 
 .contain
 {/*need to center div	*/
 	max-width: 95%;
 	width: 95%;
 	min-width: 300px;
+	    display: inline-block;
+
 
 	}
 
