--- a/vitrales.html
+++ b/vitrales.html
@@ -40,16 +40,14 @@ body {
   margin: 35px;
 }
 
-* {
-    box-sizing: border-box;
-}
 
+/* firefox version 48.0.2  max-width not working*//*need to center div	*/
 .contain
-{/*need to center div	*/
+{
 	max-width: 95%;
 	width: 95%;
 	min-width: 300px;
-	    display: inline-block;
+	
 
 
 	}
