--- a/vitrales.html
+++ b/vitrales.html
@@ -41,7 +41,7 @@ body {
 }
 
 
-/* firefox version 48.0.2  max-width not working*//*need to center div	*/
+/*need to center div	*/
 .contain
 {
 	max-width: 95%;
