--- a/heritagetour.html
+++ b/heritagetour.html
@@ -184,7 +184,7 @@ George Garland himself played an important part in the life of the city. As an e
 Across Calle Blanco from the Fire Station you will see an impressive monument.<br>
 <br>
 <a name="5"></a> 
-<b>5. La Patria y sus Héroes.</b> <br> This monument commemorates naval battles in the war of independence from Spain. It is surmounted by a statue of Vice-admiral Manuel Blanco Encalda (1790 – 1876). One plaque depicts Blanco Encalda, commander of the first naval squadron, handing over the squadron to Lord Cochrane on 23 December 1818.
+<b>5. La Patria y sus Héroes.</b> <br> This monument commemorates naval battles in the war of independence from Spain. It is surmounted by a statue of Vice-admiral Manuel Blanco Encalda (1790 – 1876). One plaque depicts Blanco Encalada, commander of the first naval squadron, handing over the squadron to Lord Cochrane on 23 December 1818.
 From the fire Station, follow AV. Brasil until you reach Bellavista. Cross it and you will find the monument to Lord Cochrane.
 <br>
 <b><a href="https://es.wikipedia.org/wiki/Monumento_a_Lord_Cochrane">Lord Cochrane Monument.</a></b>  <a href="https://goo.gl/maps/47gfGTZXkTcEP8go6">(Bellavista 410)<br></a>Lord Cochrane is revered in Chile for his role in the war of independence against Spain. His exploits during the Napoleonic wars were the inspiration for the novels of Jack Aubrey and given Hollywood treatment in the film Master and Commander. With Spain’s colonies in revolt, he was hired by Bernardo O’Higgins, Chile’s first President to lead the fledging Chilean navy. His greatest successes were the capture of the Spanish warship Esmeralda and in 1820 the attack on Valdivia, Spain’s most important base in Chile, which broke the Spanish Army.
