--- a/historical-information.html
+++ b/historical-information.html
@@ -63,6 +63,17 @@
 	min-width: 300px;
 	
 	}
+			
+			
+			
+				
+	@media screen and (max-width: 750px) {
+    iframe {
+        max-width: 100% !important;
+        width: auto !important;
+        height: auto !important;
+    }
+}
 		</style>
 		
 
@@ -130,7 +141,7 @@ Many new arrivals in Valparaiso in the nineteenth century were of British and Ge
 <iframe src="https://player.vimeo.com/video/354961087" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p><a href="https://vimeo.com/354961087">Cap 2 - La Iglesia Anglicana</a> from <a href="https://vimeo.com/inmigrantesvalparaiso">Inmigrantes Valpara&iacute;so</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 </center>  
-	    <br><br>
+	    <br>
 	&nbsp;&nbsp;&nbsp;&nbsp;    St Paul’s was built in 1858. Note that the church has no spire, bell tower, external cross or main door because he government allowed the community to build St Paul’s on the condition that it kept a “low profile”. The church was built to be a “beacon on a hill” before there was religious freedom in Chile. It was named a national monument in 1979 and a cathedral in 2016, serving the Anglican community throughout Chile.
 
 
