--- a/vitrales.html
+++ b/vitrales.html
@@ -36,22 +36,31 @@ body {
 p {
 	padding 35px 35px;
 	}
-body {
-  margin: 35px;
-}
+	
+	
+
+	
 
 
-/*need to center div	*/
-.contain
+	body
+		{
+			margin:35px;
+			}
+			
+			img
+			{
+				max-width:90%;
+				}
+				
+				.contain
 {
-	max-width: 95%;
-	width: 95%;
+	/*width: 75%; */
 	min-width: 300px;
 	
-
-
 	}
 	
+
+
 	
 	
 	
