--- a/vitrales.html
+++ b/vitrales.html
@@ -525,7 +525,11 @@ Sin firma visible: posible atribución a Lavers & Westlake
 <h3 >16. Caritas</h3>
      <p>   
 			<div style="display:hidden;"><font color="white">			
-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</font>
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+- - - - - - - </font>
 
 		</div>	
 		
