--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@ historical-information.html">Historical Information</a>
 
 	<br><br>
 <a href="vitrales.html">Vitrales</a>
-<br>
-<br>
 
+<br><br>
+<a href="organ.html">Queen Victoria Memorial Organ</a>
+<br>
+<br>
 <a href="heritagetour.html">Heritage Tour</a>
 
 <br>
