--- a/heritagetour.html
+++ b/heritagetour.html
@@ -77,7 +77,8 @@ if (document.selection) {
 </head>
 <a name="top"></a>
 <h3><a href="index.html">&#9664 Back to Main Page</a></h3>
-
+<h3><a style="float:right" href="heritagetour-german.html">Deutsch</a></h3><br>
+<h3><a style="float:right" href="heritagetour-es.html">Español</a></h3>
 <img src="images/heritage_tour/map.jpg">
 
 <body>
@@ -328,7 +329,7 @@ The building has since been sold but can still been visited at Avenida Errázuri
 <br>
  For guided tours contact:<br> 
 
-<p id="div1" style="color:grey; text-decoration: underline; <!--display:none;-->">EuropeanHeritageTourValparaiso@gmail.com </p><button id="button1" onclick="CopyToClipboard('div1')" style="color:grey; text-decoration: underline;">Click to Copy Email</button>
+<p id="div1" style="color:grey; text-decoration: underline; <!--display:none;-->">EuropeanHeritageTour@gmail.com </p><button id="button1" onclick="CopyToClipboard('div1')" style="color:grey; text-decoration: underline;">Click to Copy Email</button>
 
 
 <br><br>
