--- a/historical-information.html
+++ b/historical-information.html
@@ -747,18 +747,18 @@ https://es.wikipedia.org/wiki/Catedral_anglicana_de_San_Pablo_(Valpara%C3%ADso)
 <br>
 As well as these additional resources:<br>
 
-<li><a href="resources/documents/Iglesia_St_Paul´s,_patrimonio_tangible_e_intangible...__Revista_Archivum.pdf
+<li><a href="documents/Iglesia_St_Paul´s,_patrimonio_tangible_e_intangible...__Revista_Archivum.pdf
 
 ">Iglesia_St_Paul´s,_patrimonio_tangible_e_intangible...__Revista_Archivum.pdf</a>
 </center><br></li>	
-	<li><a href="resources/documents/MPB_Capítulo_El_Legado_de_WH_Lloyd_Libro_El_Neogótico_en_América_El_Legado_de_WH_Lloyd,_Neogótico_y_[5119]
+	<li><a href="documents/MPB_Capítulo_El_Legado_de_WH_Lloyd_Libro_El_Neogótico_en_América_El_Legado_de_WH_Lloyd,_Neogótico_y_[5119]
 .pdf
 
 ">El Legado de WH Lloyd, Neogótico y Modernización en Valparaíso - 
 Michelle Prain Brice (pdf)</a>
 </center><br></li>
 <li>
-	<a href="resources/documents/Art_Surgimiento_de_la_Iglesia_Anglicana_Saint_Paul´s_de_Valparaíso_en_el_contexto_del_siglo_XIX
+	<a href="documents/Art_Surgimiento_de_la_Iglesia_Anglicana_Saint_Paul´s_de_Valparaíso_en_el_contexto_del_siglo_XIX
 
 .pdf
 
@@ -767,7 +767,7 @@ en el contexto del siglo XIX (pdf)</a>
 </center><br></li>
 
 <li>
-	<a href="resources/documents/Iglesia_Anglicana_St.Paul's_de_Valparaíso_(MH)._Caso_Inedito_de_Utilización_de_Madera_Laminada_en_Chile_en_el_S.XIX.pdf
+	<a href="documents/Iglesia_Anglicana_St.Paul's_de_Valparaíso_(MH)._Caso_Inedito_de_Utilización_de_Madera_Laminada_en_Chile_en_el_S.XIX.pdf
 
 
 ">Iglesia Anglicana St.Paul's de Valparaíso (MH). Caso Inedito de 
