--- a/organ.html
+++ b/organ.html
@@ -122,12 +122,21 @@ The pedals and manual keys are connected from the console to the wind-chests by 
 
 <br>
 <br>
+<!--
 <center><h1>
 <a href="
 https://www.facebook.com/musicaenlasalturasValparaiso">Musica en las Alturas - Conciertos todos los Domingos a las 12:30 hrs.(facebook)</a>
 </h1></center><br>
-
+-->
+<center><h1>
+<a href="
+http://saintpaulchile.cl/?cat=61&lang=en">Musica en las Alturas - Conciertos todos los Domingos a las 12:30 hrs.</a>
+</h1></center><br>
 <br>
+<!--
+<a href="http://saintpaulchile.cl/?cat=61&lang=en">Current Events</a>
+-->
+
 <br>
 <br>
 
