--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ historical-information.html">Historical Information</a>
 <a href="vitrales.html">Vitrales</a>
 
 <br><br>
-<a href="organ.html">Queen Victoria Memorial Organ</a>
+<!--<a href="organ.html">Queen Victoria Memorial Organ</a>
 <br>
-<br>
+<br>-->
 <a href="heritagetour.html">Heritage Tour</a>
 
 <br>
@@ -57,7 +57,6 @@ historical-information.html">Historical Information</a>
 <a href="
 https://www.tripadvisor.com.ph/Attraction_Review-g294306-d8698420-Reviews-Catedral_Saint_Paul-Valparaiso_Valparaiso_Region.html?m=19905
 ">Catedral Saint Paul en TripAdvisor</a>
-
 
 
 <br>
