--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ historical-information.html">Historical Information</a>
 https://www.tripadvisor.com.ph/Attraction_Review-g294306-d8698420-Reviews-Catedral_Saint_Paul-Valparaiso_Valparaiso_Region.html?m=19905
 ">Catedral Saint Paul en TripAdvisor</a>
 
-
+<br>
+<br>
+<a href="http://saintpaulchile.cl">SaintPaulChile.CL</a>
 <br>
 <br>
 <br>
