--- a/vitrales.html
+++ b/vitrales.html
@@ -96,8 +96,11 @@ p {
 	
 						<h3 ><a title="Volver" 
 href="index.html">&#9664 Volver a página principal</a></h3>
-	<br>
 
+<h3><a style="float:right" href="vitrales-english.html">English</a></h3>
+
+	<br>
+<br>
 <div class="tab">			<center>					
 					<h1>
 			Vitrales de St Paul’s</h1>		
@@ -515,7 +518,10 @@ Sin firma visible: posible atribución a Lavers & Westlake
 <center><img src="images/vitrales/DSCN0081--Buen-Pastor.JPG"></center>
 </p>
 			<br>
-		<br><h1><a style="float: right;" 
+		<br>
+		
+		
+		<h1><a style="float: right;" 
 				href="#vitrales" title="Arriba" >&#9650</a></h1>						
 							
 						
