--- a/historical-information.html
+++ b/historical-information.html
@@ -299,7 +299,7 @@ from the shoes of people who arrived on foot, horseback or by carriage.
 <br><br>
 <center><img style="width:400px" src="images/church/DSCN0458--metal-scrapers.JPG"></center>	
 
-<br><br>
+<br><br><a name="baptistry"></a> 
 As you enter the cathedral you will find the baptistry at the back, 
 holding the limestone font. 
 
@@ -345,7 +345,7 @@ windows in memory of the six children of Thomas Woodsend, who all died in infanc
 <div id="outer">  
     <div id="inner">
 
-
+<a name="brass-plaques-ww1-2"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 To the left of the baptistry there are two brass plaques on the wall, with the names of the men from the community who gave their lives in the First and Second World Wars.
 
@@ -364,7 +364,7 @@ To the left of the baptistry there are two brass plaques on the wall, with the n
 
 <div id="outer">  
     <div id="inner">
-
+<a name="william_lloyd"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 Above your heads the wooden curved beams are made of laminated Oregon 
 pine, using a cutting edge technique, which was also used in the 
@@ -498,7 +498,7 @@ https://en.wikipedia.org/wiki/Prince_Philip,_Duke_of_Edinburgh
 <br>
 
 
-
+<a name="pulpit"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The pulpit was donated in memory of Isabel Lazonby in 1909, and it is used for the delivery of sermons, having good acoustics. 
 
@@ -508,7 +508,7 @@ The pulpit was donated in memory of Isabel Lazonby in 1909, and it is used for t
 <center><img src="images/church/DSCN0508--pulpit2.JPG"></center>
 
 
-<br><br>
+<br><br><a name="lectern"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The brass lectern holds the Bible for scripture readings.
 
@@ -529,7 +529,7 @@ The brass lectern holds the Bible for scripture readings.
 <div id="outer">  
     <div id="inner">
 
-
+<a name="rood-screen"></a> 
 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The rood screen was installed in memory of Adolphus Walbaum, 1849-1923, 
@@ -567,7 +567,7 @@ the chancel, symbolizing the curtain in the Jewish synagogue, which was torn apa
 <div id="outer">  
     <div id="inner">
 		
-		<br><br>
+		<br><br><a name="organ"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The <a href="organ.html">“Queen Victoria Memorial Organ”</a> was designed by John Craig 
 Christie and installed as a tribute to Queen Victoria with donations 
@@ -594,7 +594,8 @@ https://en.wikipedia.org/wiki/Queen_Victoria
 &nbsp;&nbsp;&nbsp;&nbsp;
 
 The organ was brought by 
-ship round Cape Horn and collapsed three years after being installed in 
+ship round <a href="
+https://en.wikipedia.org/wiki/Cape_Horn">Cape Horn</a> and collapsed three years after being installed in 
 the <a href="
 https://en.wikipedia.org/wiki/1906_Valpara%C3%ADso_earthquake">earthquake of 1906</a>, being later rebuilt in 1910. 
 </div>
@@ -636,13 +637,13 @@ href="organ.html"> here.</a></i>
 <div id="outer">  
     <div id="inner">
 
-<br>
+<br><a name="communion-table"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The communion table behind the railings is carved with the symbols of 
 the alpha and omega, the wheat and the vine, and a central cross.<br><br><center><img src="images/church/05.jpg"></center> 
 
 <br><br> 
-
+<a name="ten-commandments"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 
 On the wall behind it are the Ten Commandments from Exodus 20, painted 
