--- a/historical-information.html
+++ b/historical-information.html
@@ -345,7 +345,7 @@ windows in memory of the six children of Thomas Woodsend, who all died in infanc
 <div id="outer">  
     <div id="inner">
 
-<a name="brass-plaques-ww1-2"></a> 
+<a name="brass-plaques"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 To the left of the baptistry there are two brass plaques on the wall, with the names of the men from the community who gave their lives in the First and Second World Wars.
 
@@ -365,6 +365,8 @@ To the left of the baptistry there are two brass plaques on the wall, with the n
 <div id="outer">  
     <div id="inner">
 <a name="william_lloyd"></a> 
+<a name="architecture"></a> 
+
 &nbsp;&nbsp;&nbsp;&nbsp;
 Above your heads the wooden curved beams are made of laminated Oregon 
 pine, using a cutting edge technique, which was also used in the 
@@ -567,7 +569,7 @@ the chancel, symbolizing the curtain in the Jewish synagogue, which was torn apa
 <div id="outer">  
     <div id="inner">
 		
-		<br><br><a name="organ"></a> 
+		<br><br><a name="pipe-organ"></a> 
 &nbsp;&nbsp;&nbsp;&nbsp;
 The <a href="organ.html">“Queen Victoria Memorial Organ”</a> was designed by John Craig 
 Christie and installed as a tribute to Queen Victoria with donations 
@@ -593,7 +595,12 @@ https://en.wikipedia.org/wiki/Queen_Victoria
 
 &nbsp;&nbsp;&nbsp;&nbsp;
 
-The organ was brought by 
+The 
+<a href="
+https://en.wikipedia.org/wiki/Pipe_organ
+">organ </a>
+
+was brought by 
 ship round <a href="
 https://en.wikipedia.org/wiki/Cape_Horn">Cape Horn</a> and collapsed three years after being installed in 
 the <a href="
